philo_bonus external binary removed, few new tests added in philosophers_tester

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -28,7 +28,8 @@ DEPS	=	$(shell find $(HEADERS) -name *.h)
 
 CC		=	gcc
 
-CFLAGS	=	-O3 -Wall -Wextra -fsanitize=address
+CFLAGS	=	-Wall -Wextra -pthread
+
 INCLUDES	= -I $(HEADERS)
 
 LIBS	=	
