working on improving performances for philo, still in progress

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -53,7 +53,7 @@ DEPS	=	headers/ft_catch_results.h \
 
 CC		=	gcc
 
-CFLAGS	=	-Wall -Wextra -Werror -pthread
+CFLAGS	=	-Wall -Wextra -pthread
 
 INCLUDES	= -I $(HEADERS)
 
